@@ -1,4 +1,10 @@
 2017/01/01:
+Add $MENHIR_STDLIB as a way of controlling where Menhir looks for the file
+standard.mly. This environment variable overrides the installation-time
+default setting, and is itself overridden by the --stdlib command line
+switch. (Requested by Jonathan Protzenko.)
+
+2017/01/01:
 Makefile fix: filter out '\r' in the output of menhir --suggest-ocamlfind,
 so that the Makefile works when Menhir is compiled as a Windows executable.
 (Suggested by Jonathan Protzenko.)
